--- a/rollbacks/docker/network/tasks/main.yaml
+++ b/rollbacks/docker/network/tasks/main.yaml
@@ -1,8 +1,6 @@
 # ansible_path/rollbacks/docker/network/tasks/main.yaml
 ---
-- name:
-    DOCKER NETWORK ROLLBACK | Delete {{ projectAppNetworkName }} network and disconnect all
-    containers
+- name: DOCKER NETWORK ROLLBACK | Delete docker network and disconnect all containers
   community.docker.docker_network:
     name: '{{ projectAppNetworkName }}'
     state: absent
