--- a/rollbacks/system/sshConfig/handlers/main.yaml
+++ b/rollbacks/system/sshConfig/handlers/main.yaml
@@ -1,8 +1,7 @@
 # ansible_path/rollbacks/system/sshConfig/handlers/main.yml
 ---
-
-- name: restart ssh
-  service:
+- name: Restart ssh
+  ansible.builtin.service:
     name: ssh
     state: restarted
     enabled: true
