Update users rollback roles, fix ansible-lint warnings

--- a/rollbacks/users/admin/tasks/main.yaml
+++ b/rollbacks/users/admin/tasks/main.yaml
@@ -1,16 +1,14 @@
 # ansible_path/rollbacks/users/admin/tasks/main.yaml
-
 ---
-
-- name: ROLLBACK USER ADMIN | Remove .bashrc file from user {{ userName }} home dir
-  file:
-    path: "{{ userHome }}/.bashrc"
+- name: ROLLBACK USER ADMIN | Remove .bashrc file from user home dir {{ userName }}
+  ansible.builtin.file:
+    path: '{{ userHome }}/.bashrc'
     state: absent
   when: userIsAdmin
   tags: [rollback, users, user-admin, bashrc-file]
 
-- name: ROLLBACK USER ADMIN | Remove the user {{ userName }} from sudoers
-  file:
+- name: ROLLBACK USER ADMIN | Remove the user from sudoers {{ userName }}
+  ansible.builtin.file:
     path: /etc/sudoers.d/{{ userName }}
     state: absent
   when: userName != "root"
