--- a/rollbacks/users/group/tasks/main.yaml
+++ b/rollbacks/users/group/tasks/main.yaml
@@ -1,10 +1,8 @@
 # ansible_path/rollbacks/users/group/tasks/main.yaml
-
 ---
-
 # Create the group if not present
 - name: ROLLBACK USER GROUP | Remove the user group {{ userGroup }}
-  group:
-    name: "{{ userGroup }}"
+  ansible.builtin.group:
+    name: '{{ userGroup }}'
     state: absent
-  tags: [rollback, user-group, remove-group]
+  tags: [rollback, users, user-group, remove-group]
