--- a/rollbacks/users/user/tasks/main.yaml
+++ b/rollbacks/users/user/tasks/main.yaml
@@ -1,17 +1,17 @@
 # ansible_path/rollbacks/users/user/tasks/main.yaml
-
 ---
-
 - name: ROLLBACK USER | Remove the user {{ userName }}
-  user:
-    name: "{{ userName }}"
+  ansible.builtin.user:
+    name: '{{ userName }}'
     groups: null
     force: true
     state: absent
   register: removedUser
+  changed_when: removedUser.changed
   tags: [rollback, user, remove-user]
 
 - name: ROLLBACK USER | Find and remove all files/directories with nogroup/nouser
-  shell: "find /home -nouser -nogroup -type d -print0 | xargs -0 -r rm -rf"
-  when: removedUser is changed
+  ansible.builtin.shell:
+    'set -o pipefail && find /home -nouser -nogroup -type d -print0 | xargs -0 -r rm -rf'
+  changed_when: removedUser.changed
   tags: [rollback, user, remove-user]
