--- a/playbooks/webserver/rollbackUtils.yaml
+++ b/playbooks/webserver/rollbackUtils.yaml
@@ -1,43 +1,50 @@
 # ansible_path/playbooks/webserver/rollbackUtils.yaml
 ---
-- hosts: docker:&standalone
+- name: ROLLBACK UTILITY SERVICES | Utility services for webserver
+  hosts: docker:&standalone
   gather_facts: false
   roles:
     # Stop Poratiner agent docker container
     - {
-        role: ../../rollbacks/docker/container,
+        role: rollbacks/docker/container,
         projectAppContainerName: '{{ dockerServicePortainerContainerName }}'
       }
 
     # Remove Poratiner agent image
-    - {
-        role: ../../rollbacks/docker/image,
-        projectAppImageName: '{{ dockerServicePortainerImage }}'
-      }
+    - { role: rollbacks/docker/image, projectAppImageName: '{{ dockerServicePortainerImage }}' }
+
+    # Stop portainer server docker container
+    - role: rollbacks/docker/container
+      vars:
+        projectAppContainerName: '{{ dockerServicePortainerServerContainerName }}'
+      when: inventory_hostname in groups['master']
+
+    # Clean portainer server docker image
+    - role: rollbacks/docker/image
+      vars:
+        projectAppImageName: '{{ dockerServicePortainerServerImage }}'
+      when: inventory_hostname in groups['master']
 
     # Stop Nginx Proxy Manager docker container
     - {
-        role: ../../rollbacks/docker/container,
+        role: rollbacks/docker/container,
         projectAppContainerName: '{{ dockerServiceProxyContainerName }}'
       }
 
     # Remove Nginx Proxy Manager image
-    - { role: ../../rollbacks/docker/image, projectAppImageName: '{{ dockerServiceProxyImage }}' }
+    - { role: rollbacks/docker/image, projectAppImageName: '{{ dockerServiceProxyImage }}' }
 
     # Stop Main Site docker container
     - {
-        role: ../../rollbacks/docker/container,
+        role: rollbacks/docker/container,
         projectAppContainerName: '{{ dockerServiceMainSiteContainerName }}'
       }
 
     # Remove Main Site image
-    - {
-        role: ../../rollbacks/docker/image,
-        projectAppImageName: '{{ dockerServiceMainSiteImage }}'
-      }
+    - { role: rollbacks/docker/image, projectAppImageName: '{{ dockerServiceMainSiteImage }}' }
 
     # Remove reverse-proxy-nw network
     - {
-        role: ../../rollbacks/docker/network,
+        role: rollbacks/docker/network,
         projectAppNetworkName: '{{ dockerServiceStandaloneNetwork }}'
       }
