--- a/playbooks/docker/rollback.yaml
+++ b/playbooks/docker/rollback.yaml
@@ -1,32 +1,34 @@
 # ansible_path/playbooks/docker/rollback.yaml
 ---
+- name: ROLLBACK DOCKER INSTALL | Uninstall Docker
+  hosts: docker
   become: true
   vars:
     dockerPorts:
       [{ port: 2377, proto: 'tcp' }, { port: 7946, proto: 'any' }, { port: 4789, proto: 'udp' }]
   roles:
     # Remove Docker packages and dependencies
-    - { role: ../../rollbacks/apt/remove, aptPackages: '{{ dockerPackages }}' }
+    - { role: rollbacks/apt/remove, aptPackages: '{{ dockerPackages }}' }
 
     # Remove Docker apt repository
-    - { role: ../../rollbacks/apt/repository, aptRepoName: '{{ dockerAptRepoName }}' }
+    - { role: rollbacks/apt/repository, aptRepoName: '{{ dockerAptRepoName }}' }
 
     # Remove Docker Gpg key
     - {
-        role: ../../rollbacks/apt/keys,
+        role: rollbacks/apt/keys,
         aptKeyUri: '{{ dockerAptKeyUri }}',
         aptKeyId: '{{ dockerAptKeyId }}'
       }
 
     # Remove admin user from Docker group
     - {
-        role: ../../rollbacks/users/removeUserFromGroups,
+        role: rollbacks/users/removeUserFromGroups,
         userName: '{{ sshAdminUserName }}',
         userGroups: ['docker']
       }
 
     # Remove Docker group
-    - { role: ../../rollbacks/users/group, userGroup: docker }
+    - { role: rollbacks/users/group, userGroup: docker }
 
     # Deny ports in firewall
-    - { role: ../../rollbacks/firewall/deny, firewallPorts: '{{ dockerPorts }}' }
+    - { role: rollbacks/firewall/deny, firewallPorts: '{{ dockerPorts }}' }
