--- a/group_vars/standalone.yaml
+++ b/group_vars/standalone.yaml
@@ -2,16 +2,30 @@
 
 dockerServiceStandaloneNetwork: 'reverse-proxy-nw'
 
+# Docker Portainer Server service
+dockerServicePortainerServerContainerName: 'portainer-server-{{ inventory_hostname }}'
+dockerServicePortainerServerImage: 'portainer/portainer-ce:2.20.1-alpine'
+dockerServicePortainerServerEnvVars: { TZ: 'Europe/Paris' }
+dockerServicePortainerServerPorts: ['9443:9443', '8000:8000']
+dockerServicePortainerServerNetworks: [{ name: '{{ dockerServiceStandaloneNetwork }}' }]
+dockerServicePortainerServerVolumes:
+  [
+    '/var/run/docker.sock:/var/run/docker.sock',
+    '/srv/portainer/data:/data',
+    '/etc/localtime:/etc/localtime:ro',
+    '/etc/timezone:/etc/timezone:ro'
+  ]
+
 # Docker service Portainer
 dockerServicePortainerContainerName: 'portainer-agent-{{ inventory_hostname }}'
-dockerServicePortainerImage: 'portainer/agent:2.16.2-alpine'
+dockerServicePortainerImage: 'portainer/agent:2.20.1-alpine'
 dockerServicePortainerPorts: '9001:9001'
 dockerServicePortainerVolumes:
   ['/var/run/docker.sock:/var/run/docker.sock', '/var/lib/docker/volumes:/var/lib/docker/volumes']
 
 # Docker service Nginx Proxy Manager
 dockerServiceProxyContainerName: 'nginx-proxy-manager-{{ inventory_hostname }}'
-dockerServiceProxyImage: 'jc21/nginx-proxy-manager:2.9.18'
+dockerServiceProxyImage: 'jc21/nginx-proxy-manager:2.11.1'
 dockerServiceProxyPorts: ['80:80', '443:443', '81:81']
 dockerServiceProxyEnvVars: { TZ: 'Europe/Paris' }
 dockerServiceProxyNetworks: [{ name: '{{ dockerServiceStandaloneNetwork }}' }]
