--- a/roles/system/sshConfig/tasks/main.yaml
+++ b/roles/system/sshConfig/tasks/main.yaml
@@ -16,17 +16,15 @@
   when: not fileExists.stat.exists
   tags: [system, ssh, ssh-config, backup-config, copy-config-file]
 
-- name: SYSTEM SSHCONFIG | Edit ssh config file
-  ansible.builtin.lineinfile:
-    dest: /etc/ssh/sshd_config
-    regexp: '{{ item.regexp }}'
-    line: '{{ item.line }}'
-    state: present
-    backup: true
-  with_items: '{{ sshConfig }}'
-  when: isCopyed is success or isCopyed is skipped
-  tags: [system, ssh, ssh-config]
+- name: SYSTEM SSHCONFIG | Apply sshd config template
+  ansible.builtin.template:
+    src: sshd_config.j2
+    dest: /etc/ssh/sshd_config.d/ansible.conf
+    owner: root
+    group: root
+    mode: '0644'
   notify: RestartSsh
+  tags: [system, ssh, ssh-config]
 
 - name: SYSTEM SSHCONFIG | Add user authorized_keys file
   ansible.posix.authorized_key:
