chore: Update time sync to use Chrony service
This change simplifies the configuration and eliminates the need for additional configurations.

--- a/playbooks/init/init.yaml
+++ b/playbooks/init/init.yaml
@@ -35,8 +35,8 @@
     # 7: Logrotate configuration
     - roles/system/logrotate
 
-    # 8: Open ntp configuration
-    - roles/system/openNtp
+    # 8: Time Sync
+    - roles/system/chrony
 
     # 9: Locales configuration
     - roles/system/locales
