chore: Cleanup exim4 configuration
This change adds a rollback task to remove the EXIM configuration files and stop the EXIM service, ensuring that no sensitive data remains on the server.

--- a/playbooks/init/rollback.yaml
+++ b/playbooks/init/rollback.yaml
@@ -18,5 +18,8 @@
     # 4: Restore default sources.list file
     - rollbacks/apt/repository
 
-    # 5: Restore default ssh configuration
+    # 5: Cleanup exim4 configuration
+    - rollbacks/exim/config
+
+    # 6: Restore default ssh configuration
     - rollbacks/system/sshConfig
